# WebServiceGuard-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  test_stage1.py
web_service_guard/: .env.example  .env_tmp  ARCHITECTURE_DESIGN.md  __init__.py  audit.py  config.py  enums.py  errors.py  policy.py  pyproject.toml
web_service_guard/agent_tools/: base.py  execute.py  explore.py  plan.py  verify.py
web_service_guard/agents/: __init__.py  delivery_agent.py  explore_agent.py  general_agent.py  plan_agent.py  registry.py  sentinel_agent.py  verification_agent.py
web_service_guard/api/: webhook.py
web_service_guard/delivery/: __init__.py  developer_profile_service.py  git_delivery.py  notification_personalizer.py  notify_service.py  pr_service.py  service.py
web_service_guard/developer_profiles/: default.md  demo-service-owner.md
web_service_guard/integrations/: feishu_client.py  github_client.py  log_client.py
web_service_guard/monitoring/: dedup_store.py  event_detector.py  healthcheck_adapter.py  traceback_collector.py
web_service_guard/primitive_tools/: base.py  edit_code.py  feishu_notify.py  git_commit.py  read_code.py  read_log.py  run_test.py
web_service_guard/prompts/: __init__.py  agent_tool.py  orchestrator.py  subagent_briefs.py  subagents.py
web_service_guard/runtime/: __init__.py  decisions.py  engine.py  loop.py  openai_compatible_adapter.py  orchestrator.py  permission_semantics.py  runtime_state.py  subagent_loop.py  tool_resolution.py
web_service_guard/schemas/: __init__.py  agent_messages.py  audit_event.py  bug_event.py  event.py  (+11 more)
(+60 files in other folders)
